add index js script

--- a/src/index.html
+++ b/src/index.html
@@ -48,16 +48,6 @@
       </main>
       <footer></footer>
     </div>
-    <script>
-      const menuToggler = document.querySelector(".menutoogler");
-      const hamburger = document.querySelector(".hamburger");
-      const mobileMenu = document.querySelector(".--mobile-wrapper");
-      const toggleMenu = () => {
-        hamburger.classList.toggle("open");
-        mobileMenu.classList.toggle("active");
-      };
-
-      menuToggler.addEventListener("click", toggleMenu);
-    </script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
