--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,12 @@
           <label for="" class="--logo-header"
             ><span>Dan</span> <span>Bez</span></label
           >
+          <ul class="--web-menu">
+            <li><a href="#" rel="no referrer">Home</a></li>
+            <li><a href="#" rel="no referrer">About</a></li>
+            <li><a href="#" rel="no referrer">Service</a></li>
+            <li><a href="#" rel="no referrer">Contact</a></li>
+          </ul>
           <div class="menutoogler">
             <div class="hamburger">
               <span class="hamburger-line"></span>
@@ -44,7 +50,15 @@
         </nav>
       </header>
       <main>
-        <section></section>
+        <section class="--home-wrapper">
+          <div class="--home-container">
+            <img src="./assets/images/home-section-bg.png" alt="" />
+            <div class="redoverlay"></div>
+            <div class="fadeoverlay"></div>
+            <div class="fadeoverlay1"></div>
+            <div class="grainoverlay"></div>
+          </div>
+        </section>
       </main>
       <footer></footer>
     </div>
