--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,16 @@
     <link rel="stylesheet" type="text/css" href="./assets/styles/reset.css" />
     <link rel="stylesheet" type="text/css" href="./assets/styles/root.css" />
     <link rel="stylesheet" type="text/css" href="./assets/styles/header.css" />
-    <link rel="stylesheet" type="text/css" href="./assets/styles/aboutproduct.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./assets/styles/homesection.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./assets/styles/aboutproduct.css"
+    />
   </head>
   <body>
     <div class="--main-wrapper">
@@ -52,84 +61,129 @@
       </header>
       <main>
         <section class="--home-wrapper">
+          <div class="redoverlay"></div>
+          <div class="fadeoverlay"></div>
+          <div class="fadeoverlay1"></div>
+          <div class="grainoverlay"></div>
+
           <div class="--home-container">
-            <img src="./assets/images/home-section-bg.png" alt="" />
-            <div class="redoverlay"></div>
-            <div class="fadeoverlay"></div>
-            <div class="fadeoverlay1"></div>
-            <div class="grainoverlay"></div>
+            <div class="--homeframe10">
+              <div class="--headertop">
+                <h1><span>Dan</span><span>Bez</span></h1>
+                <h2>Fitness coach</h2>
+              </div>
+              <p>become the best version of yourself</p>
+              <div class="--alink-container">
+                <a href="">Join now</a><a href="">Learn more</a>
+              </div>
+            </div>
           </div>
         </section>
         <section></section>
         <div class="about-product">
-        <section id="about" class="--about-container">
-        <div class="--about-wrapper">
-          <div class="--main-aboutcontent">
-            <div class="--aboutimg-container">
-              <img
-                src="assets/images/aboutme-img.png"
-                alt="--danbenz-img"
-              />
-            </div>
-            <div class="--aboutmeinfo">
-              <div class="topinfo">
-                <h1>Personal Training</h1>
-                <p>
-                  Get ready to transform your life and destroy any obstacles in your way! As a current NPC classic physique bodybuilder and Division 2 collegiate athlete with several years of experience in the fitness and nutrition industry, I’ve gained enough experience and knowledge to give back to you to achieve your fitness goals and change your life!
-                </p>
+          <section id="about" class="--about-container">
+            <div class="--about-wrapper">
+              <div class="--main-aboutcontent">
+                <div class="--aboutimg-container">
+                  <img
+                    src="assets/images/aboutme-img.png"
+                    alt="--danbenz-img"
+                  />
+                </div>
+                <div class="--aboutmeinfo">
+                  <div class="topinfo">
+                    <h1>Personal Training</h1>
+                    <p>
+                      Get ready to transform your life and destroy any obstacles
+                      in your way! As a current NPC classic physique bodybuilder
+                      and Division 2 collegiate athlete with several years of
+                      experience in the fitness and nutrition industry, I’ve
+                      gained enough experience and knowledge to give back to you
+                      to achieve your fitness goals and change your life!
+                    </p>
+                  </div>
+                  <a href="#" target="_blank" rel="no_referrer">Learn More</a>
+                </div>
               </div>
-              <a
-                href="#"
-                target="_blank"
-                rel="no_referrer"
-                >Learn More</a
-              >
             </div>
-          </div>
-        </div>
-      </section>
-      <section id="product" class="--product-container">
-        <div class="--product-wrapper">
-            <div class="--main-productcontent">
+          </section>
+          <section id="product" class="--product-container">
+            <div class="--product-wrapper">
+              <div class="--main-productcontent">
                 <div class="--product-header">
-                    <h1>Full time coaching plans</h1>
+                  <h1>Full time coaching plans</h1>
                 </div>
                 <div class="--products">
-                    <div class="--product-card">
-                        <h1>monthly</h1>
-                        <span>$300</span>
-                        <p><ion-icon name="checkmark-circle-outline"></ion-icon>Flexible and Frequent Check-ins</p>
-                        <p><ion-icon name="checkmark-circle-outline"></ion-icon>Perfected Training and Nutrition plans based off your personal goals!</p>
-                        <a href="#" target="_blank" rel="no_referrer">Purchase now</a>
-                    </div>
-                    <div class="--product-card">
-                        <h1>3 months</h1>
-                        <span>$800</span>
-                        <p><ion-icon name="checkmark-circle-outline"></ion-icon>Flexible and Frequent Check-ins</p>
-                        <p><ion-icon name="checkmark-circle-outline"></ion-icon>Perfected Training and Nutrition plans based off your personal goals!</p>
-                        <a href="#" target="_blank" rel="no_referrer">Purchase now</a>
-                    </div>
-                    <div class="--product-card">
-                        <h1>6 months</h1>
-                        <span>$1,550</span>
-                        <p><ion-icon name="checkmark-circle-outline"></ion-icon>Flexible and Frequent Check-ins</p>
-                        <p><ion-icon name="checkmark-circle-outline"></ion-icon>Perfected Training and Nutrition plans based off your personal goals!</p>
-                        <a href="#" target="_blank" rel="no_referrer">Purchase now</a>
-                    </div>
-                    <div class="--product-card">
-                        <h1>12 months</h1>
-                        <span>$3,000</span>
-                        
-                        <p><ion-icon name="checkmark-circle-outline"></ion-icon>Flexible and Frequent Check-ins</p>
-                        <p><ion-icon name="checkmark-circle-outline"></ion-icon>Perfected Training and Nutrition plans based off your personal goals!</p>
-                        <a href="#" target="_blank" rel="no_referrer">Purchase now</a>
-                    </div>
+                  <div class="--product-card">
+                    <h1>monthly</h1>
+                    <span>$300</span>
+                    <p>
+                      <ion-icon name="checkmark-circle-outline"></ion-icon
+                      >Flexible and Frequent Check-ins
+                    </p>
+                    <p>
+                      <ion-icon name="checkmark-circle-outline"></ion-icon
+                      >Perfected Training and Nutrition plans based off your
+                      personal goals!
+                    </p>
+                    <a href="#" target="_blank" rel="no_referrer"
+                      >Purchase now</a
+                    >
+                  </div>
+                  <div class="--product-card">
+                    <h1>3 months</h1>
+                    <span>$800</span>
+                    <p>
+                      <ion-icon name="checkmark-circle-outline"></ion-icon
+                      >Flexible and Frequent Check-ins
+                    </p>
+                    <p>
+                      <ion-icon name="checkmark-circle-outline"></ion-icon
+                      >Perfected Training and Nutrition plans based off your
+                      personal goals!
+                    </p>
+                    <a href="#" target="_blank" rel="no_referrer"
+                      >Purchase now</a
+                    >
+                  </div>
+                  <div class="--product-card">
+                    <h1>6 months</h1>
+                    <span>$1,550</span>
+                    <p>
+                      <ion-icon name="checkmark-circle-outline"></ion-icon
+                      >Flexible and Frequent Check-ins
+                    </p>
+                    <p>
+                      <ion-icon name="checkmark-circle-outline"></ion-icon
+                      >Perfected Training and Nutrition plans based off your
+                      personal goals!
+                    </p>
+                    <a href="#" target="_blank" rel="no_referrer"
+                      >Purchase now</a
+                    >
+                  </div>
+                  <div class="--product-card">
+                    <h1>12 months</h1>
+                    <span>$3,000</span>
+
+                    <p>
+                      <ion-icon name="checkmark-circle-outline"></ion-icon
+                      >Flexible and Frequent Check-ins
+                    </p>
+                    <p>
+                      <ion-icon name="checkmark-circle-outline"></ion-icon
+                      >Perfected Training and Nutrition plans based off your
+                      personal goals!
+                    </p>
+                    <a href="#" target="_blank" rel="no_referrer"
+                      >Purchase now</a
+                    >
+                  </div>
                 </div>
+              </div>
             </div>
+          </section>
         </div>
-      </section>
-    </div>
-    
       </main>
       <footer></footer>
     </div>
