update mobile view

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" type="text/css" href="./assets/styles/reset.css" />
     <link rel="stylesheet" type="text/css" href="./assets/styles/root.css" />
     <link rel="stylesheet" type="text/css" href="./assets/styles/header.css" />
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+
     <link
       rel="stylesheet"
       type="text/css"
