changes in flex

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
       type="text/css"
       href="./assets/styles/aboutproduct.css"
     />
+    <link rel="stylesheet" type="text/css" href="./assets/styles/flex.css" />
   </head>
   <body>
     <div class="--main-wrapper">
@@ -79,7 +80,20 @@
             </div>
           </div>
         </section>
-        <section></section>
+        <section class="--flex-wrapper">
+          <div class="--flex-container">
+            <div class="--flex-dumbell-wrapper">
+              <div class="--flex-dumbell-container">
+                <img src="assets/images/dumbell.svg" />
+              </div>
+            </div>
+            <img class="--flex-image" src="assets/images/fleximage.png" />
+          </div>
+          <div class="--follow-container">
+            <img class="--follow-image" src="assets/images/follow.png" />
+            <img class="--follow-line" src="assets/images/line.svg" />
+          </div>
+        </section>
         <div class="about-product">
           <section id="about" class="--about-container">
             <div class="--about-wrapper">
