changes in flex and follow section

--- a/src/index.html
+++ b/src/index.html
@@ -86,14 +86,31 @@
           <div class="--flex-container">
             <div class="--flex-dumbell-wrapper">
               <div class="--flex-dumbell-container">
-                <img src="assets/images/dumbell.svg" />
+                <img alt="dumbell" src="assets/images/dumbell.svg" />
               </div>
             </div>
-            <img class="--flex-image" src="assets/images/fleximage.png" />
+            <img
+              alt="horizontal-image"
+              class="--flex-image"
+              src="assets/images/fleximage.png"
+            />
           </div>
           <div class="--follow-container">
-            <img class="--follow-image" src="assets/images/follow.png" />
-            <img class="--follow-line" src="assets/images/line.svg" />
+            <img
+              alt="follow-image"
+              class="--follow-image"
+              src="assets/images/follow.png"
+            />
+            <div class="--follow-social">
+              <img alt="tiktok" src="assets/images/tiktok.svg" />
+              <img alt="instagram" src="assets/images/instagram.svg" />
+              <img alt="youtube" src="assets/images/youtube.svg" />
+            </div>
+            <img
+              alt="line-red"
+              class="--follow-line"
+              src="assets/images/line.svg"
+            />
           </div>
         </section>
         <div class="about-product">
